# humanupgrade-app-ingestion_research

./: .cursorignore  .gitignore  BEANIE_REFACTOR_SUMMARY.md  IMPLEMENTATION_COMPLETE.md  ISSUE_ANALYSIS_REPORT.md  Makefile  QUICKSTART_API.md  README.md  SYSTEM_REVIEW_SUMMARY.md  TASKIQ_BLOCKING_FIX.md  WINDOWS_TASKIQ_WORKER_GUIDE.md  pyproject.toml  pyrightconfig.json  sitecustomize.py  start_worker.bat
agent_files_current/: guest_brad_pitzele_profile.json  guest_dr_gregory_kelly_identity.json  guest_gregory_kelly_profile.json
docs/: WINDOWS_EVENT_LOOP_FIX.md  hitl_backend_implementation_summary.md  hitl_complete_implementation_summary.md  hitl_deadlock_fix.md  hitl_quick_start_guide.md  hitl_testing_guide.md  hitl_websocket_fixes_summary.md  human_in_the_loop_implementation_plan.md
src/graphql/: schema.graphql
src/graphql/operations/: mutations.graphql  queries.graphql
src/graphql_client/: __init__.py  business.py  business_by_name.py  businesses.py  case_studies.py  case_study.py  client.py  compound.py  compound_by_name.py  compounds.py  create_business.py  create_case_study.py  create_compound.py  create_episode.py  create_organization.py  create_person.py  create_product.py  enums.py  episode.py  episode_by_page_url.py  episodes.py  get_organizations.py  input_types.py  link_research_run_uses_plan.py  login.py  people.py  person.py  person_by_name.py  product.py  product_by_name.py  products.py  protocols.py  search_organizations.py  update_business.py  update_business_relations.py  update_case_study.py  update_compound.py  update_compound_relations.py  update_episode.py  update_episode_relations.py  (+13 more)
src/research_agent/: __init__.py  check_full_graph.ipynb  check_graph.ipynb  entity_intel_subgraph.py  evidence_research_subgraph.py  full_transcript_graph.py  langsmith_client.py  output_models.py  research_subgraph.py  sample.py  transcript_graph.py  transcript_summary_workflow.py
src/research_agent/.cursor/: AGENTS.md  CODEBASE_ORGANIZATION_PLAN.md  CONTEXT_SET_UP_AGENT.md  COORDINATOR_PLAN.md  PROJECT_GOALS_AGENT.md
src/research_agent/agent_tools/: __init__.py  extract_functions.py  file_system_functions.py  filesystem_tools.py  firecrawl_functions.py  mongo_file_system_functions.py  tavily_functions.py  todo_list_tools.py
src/research_agent/api/: README.md  __init__.py  main.py
src/research_agent/biotech_full/: ensure_collection.py  entities_only_output_models.py  entity_intel_subgraph.py  evidence_research_subgraph.py  fix_summaries.py  force_indexing.py  get_unique_urls.py  graphql_client_helpers.py  graphql_seed_helpers.py  list_models.py  only_summary_workflow.py  research_graph.py  seed.py  transcript_summary_workflow.py
src/research_agent/clients/: async_tavily_client.py  graphql_client.py  langsmith_client.py
src/research_agent/common/: artifacts.py  logging_utils.py
src/research_agent/constants/: research_plans_prebuilt_full_entities_basic.py  research_plans_prebuilt_full_entities_standard.py  research_plans_prebuilt_models.py
src/research_agent/entities_seed/: auro_wellness.json  ben_azadi.json  biolongevity.json  energy_bits.json  ewot.json  nathan_bryan.json  qualia.json  roxiva.json  vinia.json
src/research_agent/exploration_notebooks/: case_study_exploration.ipynb
src/research_agent/graph_states/: evidence_research_subgraph.py
src/research_agent/graphs/: agent_instance_factory.py  entity_candidates_connected_graph.py  research_plan_graph.py
src/research_agent/human_upgrade/: DOMAIN_CATALOG_ENHANCEMENTS.md  __init__.py  base_models.py  docling_async.py  entity_candidates_research_directions_graph.py  entity_research_graphs.py  extraction_graph.py  intel_mongo_nodes.py  intel_plan_runner.py  research_plan_graph.py  run_workflow.py
src/research_agent/medical_db_tools/: pub_med_tools.py  run_pub_med_tools.py
src/research_agent/mission_queue/: mission_dag_builder.py  scheduler_in_memory.py  schemas.py  worker.py
src/research_agent/prompts/: candidates_prompts.py  domain_expansion_source_curations_prompts.py  entity_extraction_prompts.py  entity_fast_researcher_and_structured_output_prompts.py  entity_researcher_prompts.py  prompts.py  (+13 more)
tests/: docling_smoke_test.py  redis_streams_test.py  test_agentcore_entrypoint.py  test_entity_candidates_research_directions_graph_wiring.py  test_windows_event_loop_fix.py
(+224 files in other folders)
